criar pagina de clientes

--- a/cliente.html
+++ b/cliente.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-    caio avila de matos
-
-    rm 89010 teste ok
-
+    pagina de cliente
 </body>
 </html>
